# unified

./: README.md  algo.md  pseudocode.md  pyproject.toml
unified/: db.sqlite3  manage.py
unified/hotels/: urls.py  utils.py  views.py
unified/unified/: asgi.py  settings.py  urls.py  wsgi.py
